chore: update license info
Signed-off-by: Rifa Achrinza <25147899+achrinza@users.noreply.github.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
+# SPDX-FileCopyrightText: LoopBack Contributors
+# SPDX-License-Identifier: MIT
+
 [submodule "vendors/secvisogram"]
 	path = vendors/secvisogram
 	url = git@github.com:BSI-Bund/secvisogram.git
