--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,3 +1,6 @@
+# SPDX-FileCopyrightText: LoopBack Contributors
+# SPDX-License-Identifier: MIT
+
 name: CI
 on:
   push:
@@ -21,10 +24,12 @@ jobs:
           npm run-script --ignore-scripts install
       - name: Build project
         run: npm run --ignore-scripts build
-      - name: Run code lint
+      - name: Code lint check
         run: |
           npm run-script --ignore-scripts prettier:check
           npm run-script --ignore-scripts validate-csaf20
+      - name: REUSE compliance check
+        uses: fsfe/reuse-action@43bd643263f2a557a37e023e538ab9f83dce92a6 #v1.1.1
   commit-lint:
     name: Commit Lint
     if: github.event.pull_request
@@ -36,7 +41,7 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: 16
-      - name: Install tools
+      - name: Install dependencies
         run: npm ci --ignore-scripts
-      - name: Run commit lint
+      - name: Commit lint check
         run: npx --no-install commitlint --from=origin/main --to=HEAD --verbose
