--- a/scripts/tsconfig.json
+++ b/scripts/tsconfig.json
@@ -1,3 +1,6 @@
+// SPDX-FileCopyrightText: LoopBack Contributors
+// SPDX-License-Identifier: MIT
+
 {
     "compilerOptions": {
         "esModuleInterop": true,
