--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "vendors/secvisogram"]
 	path = vendors/secvisogram
 	url = git@github.com:BSI-Bund/secvisogram.git
+[submodule "vendors/osv-schema"]
+	path = vendors/osv-schema
+	url = git@github.com:ossf/osv-schema.git
