--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,12 @@
                 "advisories/lbsa-*.csaf.json"
             ],
             "url": "https://docs.oasis-open.org/csaf/csaf/v2.0/csaf_json_schema.json"
+        },
+        {
+            "fileMatch": [
+                "advisories/lbsa-*.osv.json"
+            ],
+            "url": "./vendors/osv-schema/validation/schema.json"
         }
     ]
 }
