--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "prettier:cli": "lb-prettier '**/*.ts' '**/*.js' 'advisories/lbsa*.csaf.json' '**/*.md'",
     "prettier:check": "npm run prettier:cli -- -l",
     "prettier:fix": "npm run prettier:cli -- --write",
-    "validate-csaf20": "ts-node --project=scripts/tsconfig.json scripts/advisories/validate-csaf20.ts"
+    "ts-node": "ts-node --project=scripts/tsconfig.json",
+    "validate-csaf20": "npm run ts-node -- scripts/advisories/validate-csaf20.ts",
+    "validate-osv": "npm run ts-node -- scripts/advisories/validate-osv.ts"
   },
   "repository": {
     "type": "git",
@@ -41,6 +43,8 @@
     "@loopback/build": "^8.1.0",
     "@loopback/eslint-config": "^12.0.2",
     "@types/glob": "^7.2.0",
+    "ajv": "^8.10.0",
+    "ajv-formats": "^2.1.1",
     "eslint": "^8.9.0",
     "eslint-plugin-prettier": "^4.0.0",
     "glob": "^7.2.0",
