feat: add CSAF 2.0 product tree generator
Signed-off-by: Rifa Achrinza <25147899+achrinza@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "prettier:check": "npm run prettier:cli -- -l",
     "prettier:fix": "npm run prettier:cli -- --write",
     "ts-node": "ts-node --project=scripts/tsconfig.json",
+    "generate-csaf20-product-tree": "npm run ts-node -- scripts/advisories/generate-csaf20-product-tree.ts",
     "validate-csaf20": "npm run ts-node -- scripts/advisories/validate-csaf20.ts",
     "validate-osv": "npm run ts-node -- scripts/advisories/validate-osv.ts"
   },
