--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "lint:fix": "npm run eslint:fix && npm run prettier:fix",
     "eslint": "lb-eslint --report-unused-disable-directives .",
     "eslint:fix": "npm run eslint -- --fix",
-    "prettier:cli": "lb-prettier '**/*.ts' '**/*.js' 'advisories/lbsa*.csaf.json' '**/*.md'",
+    "prettier:cli": "lb-prettier '**/*.ts' '**/*.js' 'advisories/**/lbsec-*.json' '**/*.md'",
     "prettier:check": "npm run prettier:cli -- -l",
     "prettier:fix": "npm run prettier:cli -- --write",
     "ts-node": "ts-node --project=scripts/tsconfig.json",
-    "validate": "npm run validate-csaf20 && npm run validate-osv",
+    "validate": "npm run validate-csaf20 && npm run validate-gemnasium && npm run validate-osv",
     "generate-csaf20-product-tree": "npm run ts-node -- scripts/advisories/generate-csaf20-product-tree.ts",
     "validate-csaf20": "npm run ts-node -- scripts/advisories/validate-csaf20.ts",
+    "validate-gemnasium": "npm run ts-node -- scripts/advisories/validate-gemnasium.ts",
     "validate-osv": "npm run ts-node -- scripts/advisories/validate-osv.ts"
   },
   "repository": {
@@ -52,6 +53,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "glob": "^7.2.0",
     "husky": "^7.0.4",
+    "js-yaml": "^4.1.0",
     "lockfile-lint": "^4.7.3",
     "secvisogram": "file:./vendors/secvisogram/app",
     "semver": "^7.3.5",
