--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "glob": "^7.2.0",
     "husky": "^7.0.4",
+    "lockfile-lint": "^4.7.3",
     "secvisogram": "file:./vendors/secvisogram/app",
     "semver": "^7.3.5",
     "ts-node": "^10.5.0"
